// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`    # FooLabel 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.label",
    ],
    "text": "    ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.label",
    ],
    "text": "# FooLabel",
  },
]
`;

exports[`    @cmd space with { expression } ! wow! id:possible in named { as well } !wow 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "    ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " space with ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "{ expression }",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " wow",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " id:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "possible in named ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "{ as well }",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": "wow",
  },
]
`;

exports[`    @fooCommand 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "    ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@fooCommand",
  },
]
`;

exports[`    AuthorId: Lorem ipsum. 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "    ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.author",
    ],
    "text": "AuthorId:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "Lorem ipsum.",
  },
]
`;

exports[`    Lorem ipsum. 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "    ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "Lorem ipsum.",
  },
]
`;

exports[` text|#TextId| 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "text",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.text-identifier",
    ],
    "text": "|#TextId|",
  },
]
`;

exports[`# FooLabel ; Bar comment 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.label",
    ],
    "text": "# FooLabel ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.label",
      "naniscript.comment",
    ],
    "text": "; Bar comment",
  },
]
`;

exports[`# FooLabel 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.label",
    ],
    "text": "# FooLabel",
  },
]
`;

exports[`; Foo Comment 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.comment",
    ],
    "text": "; Foo Comment",
  },
]
`;

exports[`<->x</option1/option2/option3>x<@cmd param>x<:expr>x 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "<->",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "</",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
      "naniscript.select-option",
    ],
    "text": "option1",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "/",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
      "naniscript.select-option",
    ],
    "text": "option2",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "/",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
      "naniscript.select-option",
    ],
    "text": "option3",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": ">",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "<@cmd param>",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "<:expr>",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x",
  },
]
`;

exports[`@cmd "foo |#TextId|{expr}bar|#ID|" x:baz|#ID| 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
    ],
    "text": """,
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
    ],
    "text": "foo ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
      "naniscript.text-identifier",
    ],
    "text": "|#TextId|",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
      "naniscript.expression",
    ],
    "text": "{expr}",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
    ],
    "text": "bar",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
      "naniscript.text-identifier",
    ],
    "text": "|#ID|",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
    ],
    "text": """,
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "baz",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.text-identifier",
    ],
    "text": "|#ID|",
  },
]
`;

exports[`@cmd "quoted foo" x:"quoted bar" 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
    ],
    "text": ""quoted foo"",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
    ],
    "text": ""quoted bar"",
  },
]
`;

exports[`@cmd \\"x\\{y\\}\\:\\" x:\\"x\\{y\\}\\" 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " \\"x\\{y\\}\\:\\"",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "\\"x\\{y\\}\\"",
  },
]
`;

exports[`@cmd escape \\" quotes \\", \\{ expr \\}, param\\:val and flag\\! id:val flag! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " escape \\" quotes \\", \\{ expr \\}, param\\:val and flag\\!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " id:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "val",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " flag",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@cmd foo x:bar y:baz ; comment 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " foo",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "bar",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " y:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "baz",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.comment",
    ],
    "text": " ; comment",
  },
]
`;

exports[`@cmd foo! !bar baz! far! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " foo",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": "bar",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " baz",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " far",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@cmd gosub:navigation 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " gosub:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.label",
    ],
    "text": "navigation",
  },
]
`;

exports[`@cmd goto:navigation 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " goto:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.label",
    ],
    "text": "navigation",
  },
]
`;

exports[`@cmd if: x > y ? z : w x! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " if:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.expression",
    ],
    "text": "x > y ? z : w",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@cmd if:{expression} x! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " if:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.expression",
    ],
    "text": "{expression}",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@cmd if:expression x:y 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " if:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.expression",
    ],
    "text": "expression",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "y",
  },
]
`;

exports[`@cmd if:x="Saying \\"Stop the car\\" was a mistake." 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " if:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.expression",
    ],
    "text": "x="Saying \\"Stop the car\\" was a mistake."",
  },
]
`;

exports[`@cmd namelessParamValue paramId:paramValue 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " namelessParamValue",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " paramId:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "paramValue",
  },
]
`;

exports[`@cmd namelessParamValue x:foo y:bar z:baz 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " namelessParamValue",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "foo",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " y:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "bar",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " z:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "baz",
  },
]
`;

exports[`@cmd paramId:paramValue 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " paramId:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "paramValue",
  },
]
`;

exports[`@cmd set:expression 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " set:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.expression",
    ],
    "text": "expression",
  },
]
`;

exports[`@cmd unless:expression 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " unless:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.expression",
    ],
    "text": "expression",
  },
]
`;

exports[`@cmd value with space param: not : param otherParam:not : param wow! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " value with space",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " param:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " not : param",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " otherParam:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "not : param",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " wow",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@cmd x foo:true !bar baz:false far! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " foo:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "true",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": "bar",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " baz:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "false",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " far",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@cmd x{ foo() ? bar : baz }x x:{expr} 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "{ foo() ? bar : baz }",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "{expr}",
  },
]
`;

exports[`@fooCommand ; Bar comment 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@fooCommand",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.comment",
    ],
    "text": " ; Bar comment",
  },
]
`;

exports[`@fooCommand 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@fooCommand",
  },
]
`;

exports[`@fooCommand namelessParameterValue 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@fooCommand",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " namelessParameterValue",
  },
]
`;

exports[`@gosub navigation 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@gosub",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.label",
    ],
    "text": "navigation",
  },
]
`;

exports[`@goto navigation 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@goto",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.label",
    ],
    "text": "navigation",
  },
]
`;

exports[`@if { expression } x! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@if",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "{ expression }",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@if expression x! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@if",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "expression",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@if x > y ? z : w x! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@if",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "x > y ? z : w",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@or expression x! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@or",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "expression",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@set expression x! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@set",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "expression",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@unless expression x! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@unless",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "expression",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`@while expression x! 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "@while",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "expression",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
]
`;

exports[`[cmd if: x > y ? z : w x!] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " if:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.expression",
    ],
    "text": "x > y ? z : w",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`[cmd if:expression] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " if:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.expression",
    ],
    "text": "expression",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`[cmd unless:expression] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " unless:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.expression",
    ],
    "text": "expression",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`[if expression x!] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "if",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "expression",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`[if x > y ? z : w x!] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "if",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "x > y ? z : w",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`[or x x!] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "or",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`[unless x x!] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command",
    ],
    "text": "unless",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`AuthorId.AppearanceId: Lorem ipsum. 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.author",
    ],
    "text": "AuthorId.AppearanceId:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "Lorem ipsum.",
  },
]
`;

exports[`AuthorId: Lorem ipsum. 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.author",
    ],
    "text": "AuthorId:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "Lorem ipsum.",
  },
]
`;

exports[`Lorem ipsum. 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "Lorem ipsum.",
  },
]
`;

exports[`Lorem[-] []ipsum[cmd param:value].[>] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "Lorem",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[-",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "ipsum",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " param:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": "value",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": ".",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[>",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`X.Y: \\{x\\}{exp}\\[x\\][cmd x x:y{exp}z|#ID| wait! !z][< as:"x"] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.author",
    ],
    "text": "X.Y:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "\\{x\\}",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.expression",
    ],
    "text": "{exp}",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "\\[x\\]",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": " x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " x:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": "y",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "{exp}",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": "z",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.text-identifier",
    ],
    "text": "|#ID|",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " wait",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": "z",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[<",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " as:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.generic-text",
    ],
    "text": ""x"",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`x <b>x</b> <ruby="X">x</ruby> x <font=x>x</font> 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "<b>",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "</b>",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": " ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "<ruby="X">",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "</ruby>",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": " x ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "<font=x>",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.tag",
    ],
    "text": "</font>",
  },
]
`;

exports[`x[; comment]y[cmd ; comment] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.comment",
    ],
    "text": "; comment",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "y",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.comment",
    ],
    "text": " ; comment",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;

exports[`x[cmd space in value param!]y[cmd p1: not : param\\! p2:space {exp} not\\:param\\!] 1`] = `
[
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "x",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": " space in value",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " param",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
      "naniscript.command.parameter.value",
    ],
    "text": "!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
    ],
    "text": "y",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "[cmd",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " p1:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": " not : param\\!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.parameter.id",
    ],
    "text": " p2:",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": "space ",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.expression",
    ],
    "text": "{exp}",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
    ],
    "text": " not\\:param\\!",
  },
  {
    "scopes": [
      "source.naniscript",
      "naniscript.generic-text",
      "naniscript.command.parameter.value",
      "naniscript.command.inline",
    ],
    "text": "]",
  },
]
`;
